# Immortal-Sovereign-Path-of-Ascension

./: .gitignore  CMakeLists.txt  README.md
cmake/ios/: Info.plist.in
docs/design/: 主游戏场景设计.md  存档系统设计.md  平台抽象层设计.md  登录场景设计.md
scripts/: build_ios_app.sh  build_sfml_android.sh  build_sfml_ios.sh  run_ios_sim.sh
src/: main.cpp
src/game/Config/: AccountConfig.h  PlatformConfig.h  ProgressionConfig.h  ResourceConfig.h  WindowConfig.h
src/game/Config/Archive/: ArchiveConfig.h
src/game/Config/Login/: LoginUiConfig.h
src/game/Config/Main/: MainUiConfig.h
src/game/Controller/Login/: LoginController.cpp  LoginController.h
src/game/Controller/Main/: MainController.cpp  MainController.h
src/game/Data/: AuthState.h  CultivationTypes.h  PlayerArchiveData.h
src/game/Data/Archive/: ArchiveLoadOutcome.h
src/game/Data/Login/: LoginRequest.h  LoginResult.h
src/game/Delegate/: IAccountObserver.h  IGameFlow.h  IPlatformPaths.h  IPlayerObserver.h
src/game/Delegate/Archive/: IArchiveCallback.h  IArchiveStore.h
src/game/Delegate/Login/: ILoginViewDelegate.h
src/game/Delegate/Main/: IMainViewDelegate.h
src/game/Director/: Director.cpp  Director.h
src/game/Infra/: Dispatcher.cpp  Dispatcher.h  ResourceManager.cpp  ResourceManager.h
src/game/Infra/Platform/: PlatformPaths.cpp  PlatformPaths.h
src/game/Model/: AccountModel.cpp  AccountModel.h  PlayerModel.cpp  PlayerModel.h
src/game/Scene/: IScene.h  LoginScene.cpp  LoginScene.h  MainScene.cpp  MainScene.h
src/game/Service/Archive/: ArchiveCipher.cpp  ArchiveCipher.h  ArchiveSerialization.cpp  ArchiveSerialization.h  ArchiveService.cpp  ArchiveService.h
src/game/View/Login/: LoginView.cpp  LoginView.h
src/game/View/Main/: MainView.cpp  MainView.h
